tests/interpreter/pass/015-max.hyg
assert(max(4,5) = 5)