tests/interpreter/fail/015-max.hyg
assert(max(4,5) = 4)